# solar-system

./: CMakeLists.txt  main.cpp
cmake/: AddGoogleTest.cmake  AddJsonCpp.cmake  AddRaylib.cmake
data/: planets.json
src/: CMakeLists.txt  body.cpp  body.h  planet.cpp  planet.h
test/: CMakeLists.txt  test_planet.cpp
